examples/type_system/failing/63_either_boundary_runtime_violation.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E1004: runtime boundary should reject non-Either value.
import TypeSystem.BoundaryUnknown

fn unwrap_or_zero(input: Either<String, Int>) -> Int {
    match input {
        Left(_msg) -> 0,
        Right(value) -> value,
        _ -> 0
    }
}

let dynamic = TypeSystem.BoundaryUnknown.dynamic_string()
unwrap_or_zero(dynamic)
